{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 18,
  "lineage": "b7bafb37-df05-6f03-6128-3478c81fbf18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lms_backend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:291956028933:instance/i-0aac43ce5ed3a892d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aac43ce5ed3a892d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lms-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a07bf20dc45946d8",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-54-236-31-43.compute-1.amazonaws.com",
            "public_ip": "54.236.31.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03519edf012a9ae77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0752f09fb8b92ae81",
            "tags": {
              "Name": "lms-backend-server"
            },
            "tags_all": {
              "Name": "lms-backend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb26892166688039"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.lms_key_pair",
            "aws_security_group.lms_backend_sg",
            "aws_subnet.lms_public_subnet",
            "aws_vpc.lms_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.lms_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lms_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291956028933:internet-gateway/igw-028d8277753817fc8",
            "id": "igw-028d8277753817fc8",
            "owner_id": "291956028933",
            "tags": {
              "Name": "lms-igw"
            },
            "tags_all": {
              "Name": "lms-igw"
            },
            "vpc_id": "vpc-019306e2a28de8e23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lms_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291956028933:route-table/rtb-0a9c4e3b5444cecc2",
            "id": "rtb-0a9c4e3b5444cecc2",
            "owner_id": "291956028933",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028d8277753817fc8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lms-public-rt"
            },
            "tags_all": {
              "Name": "lms-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-019306e2a28de8e23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lms_igw",
            "aws_vpc.lms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lms_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c5f9f6c91feefdf",
            "route_table_id": "rtb-0a9c4e3b5444cecc2",
            "subnet_id": "subnet-0752f09fb8b92ae81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lms_igw",
            "aws_route_table.lms_public_rt",
            "aws_subnet.lms_public_subnet",
            "aws_vpc.lms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lms_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291956028933:security-group/sg-0bb26892166688039",
            "description": "Allow HTTP, HTTPS, and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb26892166688039",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lms-backend-sg",
            "name_prefix": "",
            "owner_id": "291956028933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lms-backend-sg"
            },
            "tags_all": {
              "Name": "lms-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-019306e2a28de8e23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lms_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291956028933:subnet/subnet-0752f09fb8b92ae81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0752f09fb8b92ae81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291956028933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lms-public-subnet"
            },
            "tags_all": {
              "Name": "lms-public-subnet"
            },
            "vpc_id": "vpc-019306e2a28de8e23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lms_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291956028933:vpc/vpc-019306e2a28de8e23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a3b6147cd362efe",
            "default_route_table_id": "rtb-0d8175a47a400f91a",
            "default_security_group_id": "sg-085a1f02426610128",
            "dhcp_options_id": "dopt-09318028808b59b62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019306e2a28de8e23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8175a47a400f91a",
            "owner_id": "291956028933",
            "tags": {
              "Name": "lms-vpc"
            },
            "tags_all": {
              "Name": "lms-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}